--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,3 +1,9 @@
+@tailwind base;
+
+@tailwind components;
+
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -6,3 +12,6 @@
   text-shadow: 1px 1px 5px #fff;
 }
 /* write your parent styles in here for your App.js */
+b {
+  color: red;
+}
